Phase 3: Infrastructure Layer (#233)
* workflow(wf): Generate Phase 3 context and tasks for IW-148

Infrastructure Layer

Artifacts:
- phase-03-context.md
- phase-03-tasks.md

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* feat(IW-148): implement Phase 3 infrastructure layer for project registration

- Add PUT /api/v1/projects/:projectName endpoint to CaskServer (parallel
  to PUT /api/v1/worktrees/:issueId), returning 201 for new registrations
  and 200 for updates
- Add auto-pruning of stale project registrations in CaskServer.dashboard()
- Update CaskServer.projectDetails() to fall back to registered projects
  when no worktrees are found for a project (supports zero-worktree projects)
- Add ServerClient.registerProject() HTTP client method (parallel to
  registerWorktree())
- Add --add-opens JVM option for tests to support env var mutation
- All 8 new tests pass; 1665 total tests passing, no regressions

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat(infra): Project registration HTTP endpoint and client

Implements Phase 3: Infrastructure Layer for IW-148

- PUT /api/v1/projects/:projectName endpoint (register/update projects)
- ServerClient.registerProject() for CLI-to-server communication
- Auto-pruning stale project registrations on dashboard load
- projectDetails() falls back to registered projects with zero worktrees

Testing:
- Integration: 8 tests (endpoint, project details, auto-prune, client)
- Total: 1665 tests passing

Review: review-phase-03-20260303.md

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>