@@ -10,3 +10,4 @@
 //> using dep com.lihaoyi::scalatags:0.13.1
 //> using dep com.vladsch.flexmark:flexmark-all:0.64.8
 //> using test.dep org.scalameta::munit::1.2.1
+//> using test.javaOpt --add-opens=java.base/java.util=ALL-UNNAMED
